# datasaude-ml

./: .gitignore  Pipfile  pyproject.toml
Llama/: main.py  pyproject.toml
Regressao/: QUERY_STATSMODEL.sql  QUERY_TREINO_V8.sql  QUERY_TREINO_V9.sql  dados_treino_2022.pkl  dados_treino_poluentes_v3.csv  dados_treino_poluentes_v3.xlsx  dados_treino_poluentes_v4.csv  dados_treino_statsmodel.csv  dados_treino_v2.csv  dados_treino_v5.csv  dados_treino_v5.xlsx  dados_treino_v6.csv  dados_treino_v7.csv  dados_treino_v8.csv  dados_treino_v8.xlsx  main.ipynb  main_predict.ipynb  main_predict_logistic.ipynb  main_predict_xgbooster.ipynb  main_statsmodel.ipynb  main_temporal_statsmodel.ipynb  main_temporal_statsmodel_arima.ipynb  main_temporal_statsmodel_seasonal.ipynb  main_xgbooster.ipynb  predictions_example.csv  predictions_v2.csv  resultado.csv
decision_tree/: main_sklearn.ipynb  sample.py
