[tool.poetry]
name = "regressao"
version = "0.1.0"
description = ""
authors = ["caue beloni <cbeloni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
openpyxl = "^3.1.2"
joblib = "^1.4.0"
xgboost = "^2.0.3"
imblearn = "^0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
