[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["caue beloni <cbeloni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.0"
transformers = "^4.43.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
